--- a/resources/dynamic/multiple.html
+++ b/resources/dynamic/multiple.html
@@ -11,7 +11,7 @@ Dim showHeader    = CurrentADC.PropValue("showHeaders") ="1"
 Dim expandableHeaders = CurrentADC.PropValue("expandableHeaders") ="1"
 Dim accordionInitialState = CurrentADC.PropValue("accordionInitialState")
 
-Dim ar = CurrentQuestion.Responses
+Dim ar = CurrentQuestion.AvailableResponses
 Dim	otherIDarray As NumberArray
 Dim arrOpenValues As StringArray
 Dim arrOpenNames As StringArray
