--- a/resources/dynamic/multiple.html
+++ b/resources/dynamic/multiple.html
@@ -11,7 +11,7 @@ Dim showHeader    = CurrentADC.PropValue("showHeaders") ="1"
 Dim expandableHeaders = CurrentADC.PropValue("expandableHeaders") ="1"
 Dim accordionInitialState = CurrentADC.PropValue("accordionInitialState")
 
-Dim ar = CurrentQuestion.AvailableResponses
+Dim ar = CurrentQuestion.Responses
 Dim	otherIDarray As NumberArray
 Dim arrOpenValues As StringArray
 Dim arrOpenNames As StringArray
@@ -85,7 +85,7 @@ If (useList) Then
                   <span class="right-point"></span>
                   {% EndIf %}
               {% EndIf %}
-              {%:= caption %}</li>
+              <span style="display:none" id="{%= inputId %}">&nbsp;</span>{%:= caption %}</li>
 
             {% Else %}
 
