--- a/resources/dynamic/multiple.html
+++ b/resources/dynamic/multiple.html
@@ -76,7 +76,7 @@ If (useList) Then
             If ((isHeader = False) or (showHeader = True)) Then
             IF (isHeader = True) Then
             %}
-            <li class="responseHeader" data-id="{%= CurrentQuestion.id %}_{%= index %}">
+            <li class="responseHeader" data-id="{%= CurrentQuestion.id %}_{%= index %}" style="display:none">
               {%
               If (expandableHeaders = True) Then
                   If (accordionInitialState = "expanded") Then %}
@@ -90,9 +90,9 @@ If (useList) Then
             {% Else %}
 
               {% If (ar[i].Parent.isHeader = true) Then %}
-              <li class="askia-response headerchild{%= CurrentQuestion.id %}_{%= CurrentQuestion.AvailableResponses[i].Parent.index %}" style="margin-left: 1em">
+              <li class="askia-response headerchild{%= CurrentQuestion.id %}_{%= CurrentQuestion.AvailableResponses[i].Parent.index %}" style="margin-left: 1em;display:none">
               {% Else %}
-              <li class="askia-response">
+              <li class="askia-response" style="display:none">
               {% EndIf %}
                 <input type="checkbox" name="{%= inputName %}" id="{%= inputId %}" {%:= attrChecked %} {%:= exclusive %} />
                 <label for="{%= inputId %}" class="askia-checkbox"><span hidden>Checkbox</span></label>
