--- a/resources/dynamic/single.html
+++ b/resources/dynamic/single.html
@@ -100,18 +100,15 @@ If (useList) Then
                       <img src="{%= resource %}" style="vertical-align:middle" alt="{%:= caption %}"/>
                     {% EndIf %}{%:= caption %}
 
-                    {% For k = 1 To otherIDarray.Count
-                    	otherID = otherIDarray[k].ToNumber()
-                    	IF index = otherID Then %}
+                    {% IF (ar[i].IsOpen) Then %}
                             <div style="overflow:hidden"><input type="hidden" class="otherHidden"
-                                id="{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.InputName() %}"
-                                name="{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.InputName() %}"
-                                value="{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.inputValue() %}" autocomplete="off"><input type="text" aria-label="Other" class="otherText"
-                              id="other{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.InputName() %}"
-                              name="other{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.InputName() %}"
-                              data-id="{%= k %}" value="{%= CurrentQuestion.AvailableResponses[i].OpenQuestion.inputValue() %}" autocomplete="off"></div>
+                                id="{%= ar[i].OpenQuestion.InputName() %}"
+                                name="{%= ar[i].OpenQuestion.InputName() %}"
+                                value="{%= ar[i].OpenQuestion.inputValue() %}" autocomplete="off"><input type="text" aria-label="Other" class="otherText"
+                              id="other{%= ar[i].OpenQuestion.InputName() %}"
+                              name="other{%= ar[i].OpenQuestion.InputName() %}"
+                              data-id="{%= i %}" value="{%= ar[i].OpenQuestion.inputValue() %}" autocomplete="off"></div>
                       {% EndIF %}
-                    {% Next k %}
                 </label>
               </li>
             {% EndIF %}
