--- a/resources/dynamic/single.html
+++ b/resources/dynamic/single.html
@@ -92,10 +92,10 @@ If (useList) Then
               {% Else %}
               <li class="askia-response">
               {% EndIf %}
-                <input type="radio" name="{%= inputName %}" id="{%= inputId %}" value="{%= inputValue %}" {%:= attrChecked %} />
-                <label for="{%= inputId %}" class="askia-radio"><span hidden>Radio</span></label>
+                <input type="radio" name="{%= inputName %}" id="askia-input_{%= ar[i].InputValue() %}" value="{%= inputValue %}" {%:= attrChecked %} />
+                <label for="askia-input_{%= ar[i].InputValue() %}" class="askia-radio"><span hidden>Radio</span></label>
 
-                <label for="{%= inputId %}" class="askia-response-label">
+                <label for="askia-input_{%= ar[i].InputValue() %}" class="askia-response-label">
                     {% IF (resource <> "") Then %}
                       <img src="{%= resource %}" style="vertical-align:middle" alt="{%:= caption %}"/>
                     {% EndIf %}{%:= caption %}
