--- a/resources/dynamic/multiple.html
+++ b/resources/dynamic/multiple.html
@@ -62,8 +62,6 @@ If (useList) Then
         Dim inputId
         Dim attrChecked
 		    Dim exclusive
-        Dim arr
-        Dim ariaLabel
 
         For i = 1 To ar.Count
             inputName   = ar[i].InputName()
@@ -74,8 +72,6 @@ If (useList) Then
             caption     = ar[i].Caption
     		    resource	= ar.ResourceURL[i]
             index		= ar[i].index
-
-            arr = caption.Split("|")
 
             isHeader     = ar[i].isHeader
             If ((isHeader = False) or (showHeader = True)) Then
@@ -90,7 +86,7 @@ If (useList) Then
                   <span class="right-point"></span>
                   {% EndIf %}
               {% EndIf %}
-              {%:= On(arr.Count > 1, arr[1], caption)%}</li>
+              {%:= caption %}</li>
 
             {% Else %}
 
@@ -102,11 +98,11 @@ If (useList) Then
                 <input type="checkbox" name="{%= inputName %}" id="askia-input_{%= ar[i].InputValue() %}" {%:= attrChecked %} {%:= exclusive %} />
                 <label for="askia-input_{%= ar[i].InputValue() %}" class="askia-checkbox"><span hidden>Checkbox</span></label>
 
-                <label for="askia-input_{%= ar[i].InputValue() %}" class="askia-response-label"  aria-label="{%:= On(arr.Count > 1, arr[2], caption)%}">
+                <label for="askia-input_{%= ar[i].InputValue() %}" class="askia-response-label">
                     {% IF (resource <> "") Then %}
-                    <img src="{%= resource %}" style="vertical-align:middle" alt="{%:= On(arr.Count > 1, arr[1], caption)%}" />
-                    {% EndIf %}{%:= On(arr.Count > 1, arr[1], caption)%}
-
+                    <img src="{%= resource %}" style="vertical-align:middle" alt="{%:= caption %}" />
+                    {% EndIf %}{%:= caption %}
+                    
                     {% IF (ar[i].IsOpen) Then %}
                             <div style="overflow:hidden"><input type="hidden" class="otherHidden"
                                 id="{%= ar[i].OpenQuestion.InputName() %}"
