--- a/resources/dynamic/single.html
+++ b/resources/dynamic/single.html
@@ -62,8 +62,6 @@ If (useList) Then
         {%
         Dim inputId
         Dim attrChecked
-        Dim ariaLabel
-        Dim arr
 
         For i = 1 To ar.Count
             inputId     = (inputName + "_" + ar[i].InputValue()).Replace("U", "askia-input")
@@ -71,7 +69,6 @@ If (useList) Then
             inputValue  = ar[i].InputValue()
 
             caption = ar[i].Caption
-            arr = caption.Split("|")
 
 			      resource	= ar.ResourceURL[i]
             index		= ar[i].index
@@ -89,7 +86,7 @@ If (useList) Then
                   <span class="right-point"></span>
                   {% EndIf %}
               {% EndIf %}
-              {%:= On(arr.Count > 1, arr[1], caption)%}</li>
+              {%:= caption %}</li>
 
             {% Else %}
 
@@ -101,10 +98,10 @@ If (useList) Then
                 <input type="radio" name="{%= inputName %}" id="askia-input_{%= ar[i].InputValue() %}" value="{%= inputValue %}" {%:= attrChecked %} />
                 <label for="askia-input_{%= ar[i].InputValue() %}" class="askia-radio"><span hidden>Radio</span></label>
 
-                <label for="askia-input_{%= ar[i].InputValue() %}" class="askia-response-label" aria-label="{%:= On(arr.Count > 1, arr[2], caption)%}">
+                <label for="askia-input_{%= ar[i].InputValue() %}" class="askia-response-label">
                     {% IF (resource <> "") Then %}
-                      <img src="{%= resource %}" style="vertical-align:middle" alt="{%:= On(arr.Count > 1, arr[1], caption)%}"/>
-                    {% EndIf %}{%:= On(arr.Count > 1, arr[1], caption)%}
+                      <img src="{%= resource %}" style="vertical-align:middle" alt="{%:= caption %}"/>
+                    {% EndIf %}{%:= caption %}
 
                     {% IF (ar[i].IsOpen) Then %}
                             <div style="overflow:hidden"><input type="hidden" class="otherHidden"
