--- a/resources/dynamic/numeric.html
+++ b/resources/dynamic/numeric.html
@@ -1,10 +1,10 @@
 {%
+Dim lang = Interview.Language.Abbr
 Dim useInput = CurrentADC.PropValue("numUseInput")
 
 Dim inputName  = CurrentQuestion.InputName()
 
-Dim inputValue
-	inputValue = CurrentQuestion.InputValue().Replace(",",".")
+Dim inputValue = CurrentQuestion.InputValue()
 
 Dim inputCode = CurrentQuestion.InputCode
 Dim useBrowserValidation = "" + CurrentADC.PropValue("useBrowserValidation")
@@ -53,7 +53,7 @@ Dim attrReadOnly = On(CurrentQuestion.HasDK and CurrentQuestion.HasAnswered and 
         <span class="prefix">{%= CurrentADC.PropValue("numBoxPrefix") %}</span>
         <label for="askia-input-number{%= inputCode%}" hidden>Input</label>
         <input type="number" id="askia-input-number{%= inputCode %}" class="inputnumber"
-				autocomplete="off" name="{%= inputName %}" value="{%:= inputValue %}"{%:= attrMin %}{%:= attrMax %}{%:= attrStep %}{%:= attrPlaceholder %}{%:= attrReadOnly %}/>
+				autocomplete="off" name="{%= inputName %}" value="{%:= inputValue %}" lang="{%:= lang %}" {%:= attrMin %}{%:= attrMax %}{%:= attrStep %}{%:= attrPlaceholder %}{%:= attrReadOnly %}/>
         {% If (useInput = "2") Then %}
         <input type="text" id="askia-input-currency{%= inputCode %}" autocomplete="off" name="currency_{%= inputName %}" value="{%:= inputValue %}" class="thousand"{%:= attrReadOnly %} />
         {% EndIf %}
