--- a/resources/dynamic/numeric.html
+++ b/resources/dynamic/numeric.html
@@ -1,5 +1,9 @@
 {%
+
 Dim lang = Interview.Language.Abbr
+lang = Mid(lang, 1, 2)
+lang = LCase(lang)
+
 Dim useInput = CurrentADC.PropValue("numUseInput")
 
 Dim inputName  = CurrentQuestion.InputName()
@@ -53,9 +57,9 @@ Dim attrReadOnly = On(CurrentQuestion.HasDK and CurrentQuestion.HasAnswered and 
         <span class="prefix">{%= CurrentADC.PropValue("numBoxPrefix") %}</span>
         <label for="askia-input-number{%= inputCode%}" hidden>Input</label>
         <input type="number" id="askia-input-number{%= inputCode %}" class="inputnumber"
-				autocomplete="off" name="{%= inputName %}" value="{%:= inputValue %}" lang="{%:= lang %}" {%:= attrMin %}{%:= attrMax %}{%:= attrStep %}{%:= attrPlaceholder %}{%:= attrReadOnly %}/>
+				autocomplete="off" name="{%= inputName %}" lang="{%:= lang %}" value="{%:= inputValue %}" {%:= attrMin %}{%:= attrMax %}{%:= attrStep %}{%:= attrPlaceholder %}{%:= attrReadOnly %}/>
         {% If (useInput = "2") Then %}
-        <input type="text" id="askia-input-currency{%= inputCode %}" autocomplete="off" lang="{%:= lang %}" name="currency_{%= inputName %}" value="{%:= inputValue %}" class="thousand"{%:= attrReadOnly %} />
+        <input type="text" id="askia-input-currency{%= inputCode %}" lang="{%:= lang %}" autocomplete="off" name="currency_{%= inputName %}" value="{%:= inputValue %}" class="thousand"{%:= attrReadOnly %} />
         {% EndIf %}
         {% If (useInput = "1") Then %}
         <div class="range"{%:= minVal %}{%:= maxVal %}>
