--- a/resources/static/numeric.html
+++ b/resources/static/numeric.html
@@ -1,4 +1,4 @@
-{% 
+{%
 Dim useInput = CurrentADC.PropValue("numUseInput")
 
 Dim inputName  = CurrentQuestion.InputName()
@@ -8,15 +8,15 @@ Dim minValue  = On(CurrentQuestion.Type = "numeric-loop",1,CurrentQuestion.MinVa
 Dim maxValue  = CurrentQuestion.MaxValue
 
 If (CurrentQuestion.Type = "numeric-loop") Then
-	maxValue = CurrentQuestion.AvailableResponses.Count    
+	maxValue = CurrentQuestion.AvailableResponses.Count
 EndIf
 Dim rangeLength = 0
 
 Dim attrMin = On(minValue <> DK, " min=\"" + minValue + "\"", "")
 Dim attrMax = On(maxValue <> DK, " max=\"" + maxValue + "\"", "")
 
-Dim minVal = On(minValue <> DK, " min=\"" + minValue + "\"", "") 
-Dim maxVal = On(maxValue <> DK, " max=\"" + maxValue + "\"", "") 
+Dim minVal = On(minValue <> DK, " min=\"" + minValue + "\"", "")
+Dim maxVal = On(maxValue <> DK, " max=\"" + maxValue + "\"", "")
 Dim step = On(CurrentADC.PropValue("unitStep") <> "", " step=\"" + CurrentADC.PropValue("unitStep").Replace(",",".") + "\"", "")
 
 Dim attrDisabled = On(CurrentQuestion.HasDK and CurrentQuestion.HasAnswered and CurrentADC.PropValue("numDkButton") = "1", " disabled=\"disabled\"", "")
@@ -28,8 +28,8 @@ Dim attrPlaceholder = On(placeholder <> "", " placeholder=\"" + placeholder + "\
 Dim unitStep = CurrentADC.PropValue("unitStep").ToNumber()
 Dim attrStep = On(unitStep > 0, " step=\"" + unitStep + "\"", "")
 
-Dim attrChecked = On(CurrentQuestion.HasDK and CurrentQuestion.HasAnswered, " checked=\"checked\"", "") 
-Dim attrReadOnly = On(CurrentQuestion.HasDK and CurrentQuestion.HasAnswered and CurrentADC.PropValue("numDkButton") = "1", " readonly=\"readonly\"", "") 
+Dim attrChecked = On(CurrentQuestion.HasDK and CurrentQuestion.HasAnswered, " checked=\"checked\"", "")
+Dim attrReadOnly = On(CurrentQuestion.HasDK and CurrentQuestion.HasAnswered and CurrentADC.PropValue("numDkButton") = "1", " readonly=\"readonly\"", "")
 %}
     <div class="responses-container">
         <span class="prefix">{%= CurrentADC.PropValue("numBoxPrefix") %}</span>
@@ -39,7 +39,7 @@ Dim attrReadOnly = On(CurrentQuestion.HasDK and CurrentQuestion.HasAnswered and 
         <input type="text" id="askia-input-currency{%= inputCode %}" autocomplete="off" name="currency_{%= inputName %}" value="{%:= inputValue %}" class="thousand"{%:= attrReadOnly %} />
         {% EndIf %}
         {% If (useInput = "1") Then %}
-        <div class="range"{%:= minVal %}{%:= maxVal %}> 
+        <div class="range"{%:= minVal %}{%:= maxVal %}>
             <label for="askia-input-range_{%= CurrentQuestion.InputCode %}" hidden>Range</label>
             <input type="range" id="askia-input-range_{%= CurrentQuestion.InputCode %}" autocomplete="off" class="inputRange_{%= CurrentADC.InstanceId %}_1{%:= clsSelected %}" name="range{%= CurrentQuestion.InputName() %}" value="{%= CurrentQuestion.InputValue() %}"{%:= minVal %}{%:= maxVal %}{%:= step %}{%:= attrDisabled %}>
             <p class="preBar"></p>
@@ -52,8 +52,8 @@ Dim attrReadOnly = On(CurrentQuestion.HasDK and CurrentQuestion.HasAnswered and 
         <input type="hidden" name="B{%= inputCode %}">
         <input type="checkbox" id="askia-input-number_{%= inputCode %}_-1" class="dkbutton" name="M{%= inputCode %} -1" {%:= attrChecked %}>
         <label for="askia-input-number_{%= inputCode %}_-1" class="askia-checkbox"><span hidden>Checkbox</span></label>
-        <label for="askia-input-number_{%= inputCode %}_-1" class="askia-response-label">
+        <p for="askia-input-number_{%= inputCode %}_-1" class="askia-response-label">
             <span class="caption">{%:= CurrentADC.PropValue("numDkCaption") %}</span>
-        </label>
+        </p>
     </label>
     {% EndIf %}
