--- a/resources/dynamic/multiple.html
+++ b/resources/dynamic/multiple.html
@@ -98,7 +98,7 @@ If (useList) Then
                 <input type="checkbox" name="{%= inputName %}" id="askia-input_{%= ar[i].InputValue() %}" {%:= attrChecked %} {%:= exclusive %} />
                 <label for="askia-input_{%= ar[i].InputValue() %}" class="askia-checkbox"><span hidden>Checkbox</span></label>
 
-                <div for="askia-input_{%= ar[i].InputValue() %}" class="askia-response-label">
+                <div data-for="askia-input_{%= ar[i].InputValue() %}" class="askia-response-label">
                     {% IF (resource <> "") Then %}
                     <img src="{%= resource %}" style="vertical-align:middle" alt="{%:= caption %}" />
                     {% EndIf %}{%= caption %}
