--- a/resources/dynamic/single.html
+++ b/resources/dynamic/single.html
@@ -28,9 +28,11 @@ For i = 1 to ar.Count
     Endif
 Next i
 
+Dim isTestModeEnabled = CurrentADP.PropValue("test_mode_enabled")
+
 If (useList) Then
     attrSelected = On(CurrentQuestion.HasDK or CurrentQuestion.HasNA, " selected=\"selected\"", "") %}
-<select name="{%= inputName %}" aria-label="Select">
+    <select name="{%= inputName %}" aria-label="Select">
         <option value="" disabled="disabled"{%:= attrSelected %}>{%:= CurrentADC.PropValue("firstOptionText") %}</option>
     {%
     For i = 1 To ar.Count
@@ -87,6 +89,9 @@ If (useList) Then
             IF (isHeader = True) Then
             %}
             <li class="responseHeader" data-id="{%= CurrentQuestion.id %}_{%= index %}">
+              {% If isTestModeEnabled = "yes" Then %}
+              <span class="r-tag">{%:= ar[i].EntryCodeStr %}</span>
+              {% EndIF %}
               {%
               If (expandableHeaders = True) Then
                   If (accordionInitialState = "expanded") Then %}
@@ -107,15 +112,27 @@ If (useList) Then
                 <input type="radio" name="{%= inputName %}" id="askia-input_{%= ar[i].InputValue() %}" value="{%= inputValue %}" {%:= attrChecked %} />
                 <label for="askia-input_{%= ar[i].InputValue() %}" class="askia-radio"><span hidden>Radio</span></label>
                 <div data-for="askia-input_{%= ar[i].InputValue() %}" class="askia-response-label" aria-label="{%= ariaLabel %}">
+                    {% If isTestModeEnabled = "yes" Then %}
+                      <span class="r-tag">{%:= ar[i].EntryCodeStr %}</span>
+                    {% EndIF %} 
+
                     {% IF (resource <> "") Then %}
                       <img src="{%= resource %}" style="vertical-align:middle" alt="{%:= caption %}"/>
                     {% EndIf %}{%:= caption %}
 
-                    {% IF (ar[i].IsOpen = true) Then %}
-                            <div style="overflow:hidden"><input type="text" aria-label="Other" class="otherText"
-                              id="{%= ar[i].OpenQuestion.InputName() %}"
-                              name="{%= ar[i].OpenQuestion.InputName() %}"
-                              data-id="{%= i %}" value="{%= ar[i].OpenQuestion.inputValue() %}" autocomplete="off"></div>
+                    {% IF (ar[i].IsOpen) Then %}
+                      <div style="overflow:hidden">
+                        <input type="text" aria-label="Other" class="otherText"
+                        id="{%= ar[i].OpenQuestion.InputName() %}"
+                        name="{%= ar[i].OpenQuestion.InputName() %}"
+                        data-id="{%= i %}" value="{%= ar[i].OpenQuestion.inputValue() %}" autocomplete="off">
+                      </div>
+                    {% EndIF %}
+
+                    {% If isTestModeEnabled = "yes" Then %}
+                      {% If ar[i].Routings.Count > 0 Then %}
+                        <span onmouseover="writeRoutingInfo('{%:= ar[i].Routings %}', this)" onmouseout="removeRoutingInfo(this)"><span class="i-tag">ℹ️</span><span></span></span>
+                      {% EndIF %}
                     {% EndIF %}
                 </div>
               </li>
@@ -124,3 +141,13 @@ If (useList) Then
         {% Next %}
     </ul>
 {% EndIf %}
+<script>
+  function writeRoutingInfo(txt, infoElem) {
+    infoElem.children[1].innerHTML = txt;
+    infoElem.children[1].classList.add("routing-info");
+  }
+  function removeRoutingInfo(infoElem) {
+    infoElem.children[1].innerHTML = "";
+    infoElem.children[1].classList.remove("routing-info");
+  }
+</script>
